tests/feature_tests/error_pointer_math.c
int main() {
  int* a; int *b;

  // error: invalid operand types for addition
  a + b;

  // error: invalid operand types for multiplication
  a * b;

  // error: invalid operand types for division
  a / b;

  // error: invalid operand types for subtraction
  3 - a;
}
